BUG#18094 Slave caches invalid table definition after atlters causes select failure - return correct object status from ndb dictionary - check for validity of index retrieved from index, and retry if invalid